--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.2.0",
     "@nestjs/typeorm": "^10.0.1",
     "@types/multer": "^1.4.11",
     "cache-manager": "^5.4.0",
