--- a/docker-compose-db.yaml
+++ b/docker-compose-db.yaml
@@ -3,7 +3,7 @@
 services:
   # PostgreSQL
   postgres-db:
-    container_name: tienda-db_postgres
+    container_name: macjava-db_postgres
     image: postgres:12-alpine
     restart: always
     env_file: .env
@@ -14,13 +14,14 @@ services:
     ports:
       - ${POSTGRES_PORT}:5432
     volumes:
-      - ./database/tienda.sql:/docker-entrypoint-initdb.d/tienda.sql
+      - ./database/init.sql:/docker-entrypoint-initdb.d/macjava.sql
     networks:
-      - tienda-network
+      - macjava-network
+
   # Adminer para conectarse a la base de datos
   # Quitar en despliegue final
   adminer-postgres-db:
-    container_name: tienda-db_adminer-postgres-db
+    container_name: macjava-db_adminer-postgres-db
     image: adminer
     restart: always
     env_file: .env
@@ -29,7 +30,25 @@ services:
     depends_on:
       - postgres-db
     networks:
-      - tienda-network
+      - macjava-network
+
+  # MongoDB
+  mongo-db:
+    container_name: macjava-db_mongo
+    image: mongo:5.0
+    restart: always
+    env_file: .env
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${DATABASE_USER}
+      MONGO_INITDB_ROOT_PASSWORD: ${DATABASE_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
+    ports:
+      - ${MONGO_PORT}:27017
+    volumes:
+      - ./database/init.js:/docker-entrypoint-initdb.d/macjava.js:ro
+    networks:
+      - macjava-network
+
 networks:
-  tienda-network:
+  macjava-network:
     driver: bridge
