feat(cambios menores uso locale para validar)

--- a/.env
+++ b/.env
@@ -22,3 +22,7 @@ SSL_KEY=./cert/keystore.p12
 SSL_CERT=./cert/cert.pem
 #ENVIROMENT
 NODE_ENV=dev
+#LOCALES
+APP_LOCALE_COUNTRY= es-ES
+APP_LOCALE_MOBILE = es-ES
+APP_LOCALE_ID_CARD = ES
