--- a/.env.prod
+++ b/.env.prod
@@ -5,11 +5,11 @@ API_VERSION=v1
 DATABASE_USER=admin
 DATABASE_PASSWORD=admin123
 #POSTGRES_DATABASE
-POSTGRES_HOST=postgres-db
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=MACJAVA_PS
 #MONGO_DATABASE
-MONGO_HOST=mongo-db
+MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DATABASE=MACJAVA_MDB
 #STORAGE
